[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lectron"
version = "1.0.0"
authors = [
  { name="Keno Krieger", email="kriegerk@uni-bremen.de" },
]
description = "A package for biophysical modellation"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

[project.urls]
homepage = "https://github.com/kenokrieger/lectron"
repository = "https://github.com/kenokrieger/lectron"
issues = "https://github.com/kenokrieger/lectron/issues"
